--- a/lottery_admin/assets/less/home/main.less
+++ b/lottery_admin/assets/less/home/main.less
@@ -1,5 +1,6 @@
 @import '../bin/normalize/normalize.less';
 @import './color.less';
+@import './bin/popup.less';
 .footer{
 	float: left;
 	width: 100%;
