--- a/lottery_pc/assets/less/main.less
+++ b/lottery_pc/assets/less/main.less
@@ -1,4 +1,5 @@
 @import './bin/normalize/normalize.less';
+@import './bin/popup.less';
 @import './color.less';
 @import './widget/top-header.less';
 .footer{
