--- a/lottery_admin/assets/css/admin/style/setting.style.css
+++ b/lottery_admin/assets/css/admin/style/setting.style.css
@@ -1,32 +1,1 @@
-.setting {
-  max-width: 840px;
-}
-.setting select {
-  border: 1px solid #fff;
-  padding: 3px 0px;
-  width: 250px;
-  outline: none;
-  cursor: pointer;
-}
-.setting input[type='checkbox'] {
-  padding: 0;
-}
-.setting td {
-  font-size: 14px;
-  padding: 15px 20px;
-  color: #555;
-  height: 49px;
-  border-bottom: 1px dotted #eee!important;
-}
-.setting th {
-  padding: 13px 20px;
-  fbackground-color: #f7f7f7;
-}
-.setting input[type='text'] {
-  color: #555;
-  border: none;
-  outline: none;
-  margin-top: 4px;
-  padding: 0px 0;
-  width: 300px;
-}
+.setting{max-width:840px}.setting select{border:1px solid #fff;padding:3px 0;width:250px;outline:none;cursor:pointer}.setting input[type='checkbox']{padding:0}.setting td{font-size:14px;padding:15px 20px;color:#555;height:49px;border-bottom:1px dotted #eee !important}.setting th{padding:13px 20px;fbackground-color:#f7f7f7}.setting input[type='text']{color:#555;border:none;outline:none;margin-top:4px;padding:0 0;width:300px}
