--- a/lottery_mobile/assets/css/page/me.css
+++ b/lottery_mobile/assets/css/page/me.css
@@ -1,59 +1,1 @@
-.portrait {
-  width: 100%;
-  height: 150px;
-  background-color: #de3027;
-  text-align: center;
-  border-radius: 0 0 1px 1px;
-}
-.portrait h2 {
-  font-weight: 400;
-  color: #fff;
-  margin-top: 10px;
-}
-.portrait img {
-  margin-top: 17px;
-  width: 75px;
-  height: 75px;
-  border-radius: 100%;
-}
-.list .item {
-  float: left;
-  width: 100%;
-  background-color: #fff;
-  border-bottom: 1px solid #eee;
-  padding: 11px 25px;
-}
-.menu i {
-  font-size: 14px!important;
-  margin-right: 7px;
-}
-.menu .icon-coupons {
-  position: relative;
-  top: 1px;
-  font-size: 17px!important;
-}
-.menu span {
-  font-size: 12px;
-  float: right;
-  color: #aaa;
-  margin-top: 2px;
-}
-.capital {
-  display: flex;
-  background-color: #fff;
-}
-.capital .item {
-  font-size: 15px;
-  padding: 12px 0;
-  color: #777;
-  flex: 1;
-  border-right: 1px solid #eee;
-  text-align: center;
-}
-.capital .item i {
-  position: relative;
-  top: 1px;
-}
-.outlogin .btn {
-  margin: 0 auto;
-}
+.portrait{width:100%;height:150px;background-color:#de3027;text-align:center;border-radius:0 0 1px 1px}.portrait h2{font-weight:400;color:#fff;margin-top:10px}.portrait img{margin-top:17px;width:75px;height:75px;border-radius:100%}.list .item{float:left;width:100%;background-color:#fff;border-bottom:1px solid #eee;padding:11px 25px}.menu i{font-size:14px !important;margin-right:7px}.menu .icon-coupons{position:relative;top:1px;font-size:17px !important}.menu span{font-size:12px;float:right;color:#aaa;margin-top:2px}.capital{display:flex;background-color:#fff}.capital .item{font-size:15px;padding:12px 0;color:#777;flex:1;border-right:1px solid #eee;text-align:center}.capital .item i{position:relative;top:1px}.outlogin .btn{margin:0 auto}
