--- a/lottery_mobile/assets/css/page/shop.css
+++ b/lottery_mobile/assets/css/page/shop.css
@@ -1,47 +1,1 @@
-.shop {
-  float: left;
-  width: 100%;
-}
-.shop a {
-  color: #666;
-}
-.shop .item {
-  float: left;
-  width: 100%;
-  overflow: hidden;
-  padding: 0px 10px;
-  background-color: #fff;
-  display: flex;
-  margin-bottom: 8px;
-}
-.shop .item .left-image {
-  position: relative;
-  flex: 3;
-  height: 72px;
-}
-.shop .item .left-image img {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -8px;
-  right: 0;
-  margin: auto;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 100%;
-  background-color: #eee;
-}
-.shop .item .content {
-  margin-top: 16.5px;
-  flex: 7;
-}
-.shop .item .content h1 {
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-.shop .item .content p {
-  color: #aaa;
-  font-size: 12px;
-}
+.shop{float:left;width:100%}.shop a{color:#666}.shop .item{float:left;width:100%;overflow:hidden;padding:0 10px;background-color:#fff;display:flex;margin-bottom:8px}.shop .item .left-image{position:relative;flex:3;height:72px}.shop .item .left-image img{position:absolute;top:0;bottom:0;left:-8px;right:0;margin:auto;width:50px;height:50px;border:none;border-radius:100%;background-color:#eee}.shop .item .content{margin-top:16.5px;flex:7}.shop .item .content h1{font-size:16px;font-weight:500;margin-bottom:10px}.shop .item .content p{color:#aaa;font-size:12px}
