--- a/lottery_mobile/assets/css/style.css
+++ b/lottery_mobile/assets/css/style.css
@@ -1,383 +1,1 @@
-/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  margin: 0;
-}
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block;
-}
-h1 {
-  margin: .67em 0;
-  font-size: 2em;
-}
-figcaption,
-figure,
-main {
-  display: block;
-}
-figure {
-  margin: 1em 40px;
-}
-hr {
-  overflow: visible;
-  box-sizing: content-box;
-  height: 0;
-}
-pre {
-  font-size: 1em;
-  font-family: monospace;
-}
-a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-a:active,
-a:hover {
-  outline-width: 0;
-}
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-b,
-strong {
-  font-weight: inherit;
-  font-weight: bolder;
-}
-code,
-kbd,
-samp {
-  font-size: 1em;
-  font-family: monospace;
-}
-dfn {
-  font-style: italic;
-}
-mark {
-  background-color: #ff0;
-  color: #000000;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  position: relative;
-  vertical-align: baseline;
-  font-size: 75%;
-  line-height: 0;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
-}
-audio,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-img {
-  border-style: none;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-  margin: 0;
-  font-size: 100%;
-  font-family: sans-serif;
-  line-height: 1.15;
-}
-button,
-input {
-  overflow: visible;
-}
-button,
-select {
-  text-transform: none;
-}
-[type=reset],
-[type=submit],
-button,
-html [type=button] {
-  -webkit-appearance: button;
-}
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
-button::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
-}
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring,
-button:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-fieldset {
-  margin: 0 2px;
-  padding: .35em .625em .75em;
-  border: 1px solid #c0c0c0;
-}
-legend {
-  display: table;
-  box-sizing: border-box;
-  padding: 0;
-  max-width: 100%;
-  color: inherit;
-  white-space: normal;
-}
-progress {
-  display: inline-block;
-  vertical-align: baseline;
-}
-textarea {
-  overflow: auto;
-}
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
-  padding: 0;
-}
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-[type=search] {
-  outline-offset: -2px;
-  -webkit-appearance: textfield;
-}
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-details,
-menu {
-  display: block;
-}
-summary {
-  display: list-item;
-}
-canvas {
-  display: inline-block;
-}
-[hidden],
-template {
-  display: none;
-}
-ul,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-  padding: 0;
-}
-a {
-  text-decoration: none;
-}
-body {
-  font-family: '微软雅黑';
-  font-size: 14px;
-}
-.disabled {
-  opacity: 0.5!important;
-  cursor: no-drop !important;
-}
-.btn {
-  outline: none;
-  cursor: pointer;
-  border: none;
-  color: #888;
-  font-size: 12px;
-  padding: 8px 12px;
-  border: 1px solid #f2f2f2;
-  border-radius: 4px;
-  margin-right: 6px;
-  background-color: #fff;
-}
-.btn i {
-  margin-right: 7px;
-}
-.btn.danger {
-  border: none;
-  background-color: #ff5d4c;
-  color: #fff;
-}
-.btn.success {
-  border: none;
-  background-color: #34bf5e;
-  color: #fff;
-}
-.btn.active,
-.btn.fezocms {
-  border: none;
-  background-color: #339BEB;
-  color: #fff;
-}
-.btn:hover {
-  opacity: 0.9;
-}
-.column {
-  float: left;
-  width: 100%;
-}
-*,
-*:after {
-  -moz-box-sizing: border-box;
-  /*Firefox3.5+*/
-  -webkit-box-sizing: border-box;
-  /*Safari3.2+*/
-  -o-box-sizing: border-box;
-  /*Opera9.6*/
-  -ms-box-sizing: border-box;
-  /*IE8*/
-  box-sizing: border-box;
-  /*W3C鏍囧噯(IE9+锛孲afari5.1+,Chrome10.0+,Opera10.6+閮界鍚坆ox-sizing鐨剋3c鏍囧噯璇硶)*/
-}
-body {
-  overflow-x: hidden;
-}
-#webapp-content {
-  overflow: hidden;
-}
-.webapp-float-content {
-  position: absolute;
-  left: 100%;
-  top: 0;
-  width: 100%;
-  background-color: #f2f2f2;
-  transition: left 0.5s;
-  -moz-transition: left 0.5s;
-  /* Firefox 4 */
-  -webkit-transition: left 0.5s;
-  /* Safari 和 Chrome */
-  -o-transition: left 0.5s;
-  /* Opera */
-}
-@-webkit-keyframes loader24 {
-  0% {
-    -webkit-transform: scale(1, 0.3);
-  }
-  100% {
-    -webkit-transform: scale(1, 1);
-  }
-}
-.loader {
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background-color: #fff;
-  z-index: 999;
-  left: 0;
-  top: 0;
-}
-.loader .loader-24 {
-  position: fixed;
-  margin: auto;
-  width: 80px;
-  height: 110px;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  left: 0;
-}
-.loader .loader-24 div {
-  width: 5px;
-  height: 35px;
-  background: #ff0000;
-  border-radius: 2px;
-  display: inline-block;
-}
-.loader .loader-24 div:nth-child(1) {
-  -webkit-animation: loader24 0.4s -0.3s ease-in-out infinite alternate;
-}
-.loader .loader-24 div:nth-child(2) {
-  -webkit-animation: loader24 0.4s -0.25s ease-in-out infinite alternate;
-}
-.loader .loader-24 div:nth-child(3) {
-  -webkit-animation: loader24 0.4s -0.2s ease-in-out infinite alternate;
-}
-.loader .loader-24 div:nth-child(4) {
-  -webkit-animation: loader24 0.4s -0.1s ease-in-out infinite alternate;
-}
-.loader .loader-24 div:nth-child(5) {
-  -webkit-animation: loader24 0.4s 0s ease-in-out infinite alternate;
-}
-body {
-  background-color: #f2f2f2;
-  color: #555;
-}
-html,
-footer {
-  max-width: 640px;
-}
-.list {
-  float: left;
-  width: 100%;
-  margin-bottom: 10px;
-}
-.footer {
-  height: 55px;
-  float: left;
-  width: 100%;
-}
-footer {
-  border-top: 1px solid #eee;
-  position: fixed;
-  bottom: 0;
-  z-index: 1024;
-  left: 0;
-  width: 100%;
-  float: left;
-  display: flex;
-  background-color: #fff;
-}
-footer a {
-  display: block;
-  width: 100%;
-  padding: 6px 0;
-  height: 50px;
-  outline: none;
-  color: #de3027;
-}
-footer a i {
-  font-size: 21px!important;
-}
-footer a p {
-  margin-top: 1px;
-}
-footer .item {
-  flex: 1;
-  text-align: center;
-}
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{margin:.67em 0;font-size:2em}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{overflow:visible;box-sizing:content-box;height:0}pre{font-size:1em;font-family:monospace}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit;font-weight:bolder}code,kbd,samp{font-size:1em;font-family:monospace}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{position:relative;vertical-align:baseline;font-size:75%;line-height:0}sub{bottom:-0.25em}sup{top:-0.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{margin:0;font-size:100%;font-family:sans-serif;line-height:1.15}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{padding:0;border-style:none}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{margin:0 2px;padding:.35em .625em .75em;border:1px solid #c0c0c0}legend{display:table;box-sizing:border-box;padding:0;max-width:100%;color:inherit;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{outline-offset:-2px;-webkit-appearance:textfield}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}[hidden],template{display:none}ul,li,h1,h2,h3,h4,h5,h6,p{margin:0;padding:0}a{text-decoration:none}body{font-family:'微软雅黑';font-size:14px}.disabled{opacity:.5 !important;cursor:no-drop !important}.btn{outline:none;cursor:pointer;border:none;color:#888;font-size:12px;padding:8px 12px;border:1px solid #f2f2f2;border-radius:4px;margin-right:6px;background-color:#fff}.btn i{margin-right:7px}.btn.danger{border:none;background-color:#ff5d4c;color:#fff}.btn.success{border:none;background-color:#34bf5e;color:#fff}.btn.active,.btn.fezocms{border:none;background-color:#339beb;color:#fff}.btn:hover{opacity:.9}.column{float:left;width:100%}*,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}body{overflow-x:hidden}#webapp-content{overflow:hidden}.webapp-float-content{position:absolute;left:100%;top:0;width:100%;background-color:#f2f2f2;transition:left .5s;-moz-transition:left .5s;-webkit-transition:left .5s;-o-transition:left .5s}@-webkit-keyframes loader24{0%{-webkit-transform:scale(1, .3)}100%{-webkit-transform:scale(1, 1)}}.loader{text-align:center;width:100%;height:100%;position:fixed;background-color:#fff;z-index:999;left:0;top:0}.loader .loader-24{position:fixed;margin:auto;width:80px;height:110px;right:0;top:0;bottom:0;left:0}.loader .loader-24 div{width:5px;height:35px;background:#f00;border-radius:2px;display:inline-block}.loader .loader-24 div:nth-child(1){-webkit-animation:loader24 .4s -0.3s ease-in-out infinite alternate}.loader .loader-24 div:nth-child(2){-webkit-animation:loader24 .4s -0.25s ease-in-out infinite alternate}.loader .loader-24 div:nth-child(3){-webkit-animation:loader24 .4s -0.2s ease-in-out infinite alternate}.loader .loader-24 div:nth-child(4){-webkit-animation:loader24 .4s -0.1s ease-in-out infinite alternate}.loader .loader-24 div:nth-child(5){-webkit-animation:loader24 .4s 0s ease-in-out infinite alternate}body{background-color:#f2f2f2;color:#555}html,footer{max-width:640px}.list{float:left;width:100%;margin-bottom:10px}.footer{height:55px;float:left;width:100%}footer{border-top:1px solid #eee;position:fixed;bottom:0;z-index:1024;left:0;width:100%;float:left;display:flex;background-color:#fff}footer a{display:block;width:100%;padding:6px 0;height:50px;outline:none;color:#de3027}footer a i{font-size:21px !important}footer a p{margin-top:1px}footer .item{flex:1;text-align:center}
