--- a/lottery_pc/assets/less/page/center.less
+++ b/lottery_pc/assets/less/page/center.less
@@ -1,4 +1,25 @@
 @import '../color.less';
+table{
+	width:100%;
+	border-bottom:1px solid #eaeaea;
+	border-left:1px solid #eaeaea;
+	th , td{
+		font-size:13px;
+		vertical-align: middle;
+		text-align: center;
+		padding: 10px;
+		border-right:1px solid #eaeaea;
+		border-top:1px solid #eaeaea;
+	}
+	td{
+		line-height: 28px;
+	}
+	tr{
+		width:100%;
+	}
+}
+
+
 .title.top{
 	height: 105px;
 	width: 100%;
