--- a/lottery_pc/assets/less/page/center.less
+++ b/lottery_pc/assets/less/page/center.less
@@ -1,15 +1,15 @@
 @import '../color.less';
 table{
 	width:100%;
-	border-bottom:1px solid #eaeaea;
-	border-left:1px solid #eaeaea;
+	border-bottom:1px solid #ddd;
+	border-left:1px solid #ddd;
 	th , td{
 		font-size:13px;
 		vertical-align: middle;
 		text-align: center;
 		padding: 10px;
-		border-right:1px solid #eaeaea;
-		border-top:1px solid #eaeaea;
+		border-right:1px solid #ddd;
+		border-top:1px solid #ddd;
 	}
 	td{
 		line-height: 28px;
@@ -130,7 +130,7 @@ table{
 				-webkit-transition: all .15s ease-in-out;
 				-o-transition: all .15s ease-in-out;
 				-ms-transition: all .15s ease-in-out;
-			    &:hover{
+			    &.active , &:hover{
 			    	color:@mainBackgroundColor2;
 			    	border-radius: 30px;
 			    	font-size: 14px;
