--- a/lottery_pc/assets/less/main.less
+++ b/lottery_pc/assets/less/main.less
@@ -166,3 +166,54 @@
 body{
 	background: url(../images/bg.jpg);
 }
+
+
+
+.help {
+    padding: 10px;
+    background: #F8F6F6;
+    width: 100%;
+    margin: 5px auto 15px auto;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    line-height: 25px;
+}
+
+.help h4 {
+    font-size: 15px;
+    color: #ea721a;
+    display: block;
+    position: relative;
+    vertical-align: middle;
+}
+
+.help h4 span {
+    font: 18px 'Microsoft Yahei';
+    font-weight: 600;
+    margin-left: 5px;
+    line-height: 35px;
+    position: relative;
+    top: -2px;
+    vertical-align: middle;
+}
+
+.help p {
+    display: block;
+    line-height: 25px;
+    font-size: 12px;
+    padding-left: 5px;
+}
+
+.help p .redts {
+    color: red;
+}
+
+.help p .redtsb {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.help p .yellowts {
+    color: #D85D00;
+}
+
