--- a/lottery_admin/assets/less/home/main.less
+++ b/lottery_admin/assets/less/home/main.less
@@ -1,6 +1,15 @@
 @import '../bin/normalize/normalize.less';
 @import './color.less';
 @import './bin/popup.less';
+.page{
+	.pagination{
+		li{
+			float: left;
+		}
+	}
+}
+
+
 .footer{
 	float: left;
 	width: 100%;
