--- a/lottery_pc/assets/css/main.css
+++ b/lottery_pc/assets/css/main.css
@@ -1027,6 +1027,40 @@ li {
   pointer-events: auto;
   z-index: 999;
 }
+.page {
+  float: left;
+  padding: 10px;
+  margin-top: 10px;
+  width: 100%;
+}
+.page li {
+  font-size: 13px;
+  border: 1px solid #f2f2f2;
+  color: #aaa;
+  float: left;
+  margin-right: 0px;
+  border-radius: 4px;
+}
+.page li:hover,
+.page li.active {
+  background-color: #11B35E;
+}
+.page li:hover a,
+.page li.active a {
+  color: #fff;
+}
+.page li a {
+  border-radius: 4px;
+  display: block;
+  padding: 4px 6px;
+  width: 100%;
+  height: 100%;
+  color: #888;
+  text-decoration: none;
+}
+.page .fr {
+  margin-top: 0px!important;
+}
 .footer {
   float: left;
   width: 100%;
