--- a/lottery_pc/assets/less/main.less
+++ b/lottery_pc/assets/less/main.less
@@ -2,6 +2,40 @@
 @import './bin/popup.less';
 @import './color.less';
 @import './widget/top-header.less';
+
+
+.page{
+	float: left;
+	padding:10px;
+	margin-top:10px;
+	width: 100%;
+	li{
+		font-size: 13px;
+		border:1px solid #f2f2f2;
+		color:#aaa;
+		float: left;
+		margin-right:0px;
+		border-radius:4px;
+		&:hover , &.active{
+			a{
+				color:#fff;
+			}
+			background-color: #11B35E;
+		}
+		a{
+			border-radius:4px;
+			display:block;
+			padding:4px 6px;
+			width:100%;
+			height:100%;
+			color:#888;
+			text-decoration: none;
+		}
+	}
+	.fr{
+		margin-top:0px!important;
+	}
+}
 .footer{
 	float: left;
 	width: 100%;
