--- a/lottery_mobile/templates/me.html
+++ b/lottery_mobile/templates/me.html
@@ -3,7 +3,7 @@
 <div class="list" style="margin-bottom: 0;">
 	<div class="portrait">
 		<img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=3663257436,3766300298&fm=111&gp=0.jpg" alt="">
-		<h2>李墨</h2>
+		<h2>test</h2>
 	</div>
 </div>
 
