--- a/lottery_admin/assets/less/admin/style.less
+++ b/lottery_admin/assets/less/admin/style.less
@@ -27,8 +27,67 @@ body{
 	position: fixed;
 	top:0;left:0;
 	height: 100%;
-	width: 38px;
+	width: 135px;
 	background-color: #293038;
+	
+	.item{
+		float: left;
+		width: 100%;
+		h2{
+			color:#f2f2f2;
+			font-weight: 400;
+			font-size: 17px;
+			float: left;
+		}
+		.title{
+			color:#f2f2f2;
+			float: left;
+
+		}
+	}
+
+	.song{
+		i , a{color:#f2f2f2}
+		a{
+			color: #777;
+			padding: 10px 0;
+		}
+		li{
+			border-bottom:1px solid #333;
+			&:hover , &.active{
+				background-color: #222;
+			}
+			font-size: 12px;
+			float: left;
+			width: 100%;
+			text-align: center;
+			position: relative;
+			display: block;
+			width: 100%;
+			height: 100%;
+			text-decoration: none;
+			a{
+				color: #777;
+				padding: 10px 0;
+			}
+			i{
+				margin-right: 7px;
+				margin-left:3px;
+			}
+		}
+
+	}
+
+
+
+
+
+
+
+
+
+
+
 	.header-image{
 		padding:10px 6px;
 		img{
