--- a/lottery_mobile/assets/css/page/find.css
+++ b/lottery_mobile/assets/css/page/find.css
@@ -1,1 +1,67 @@
-.menu{display:flex;background-color:#fff;padding:0 5px;overflow:hidden;float:left;width:100%}.menu .item{flex:1;padding:7px 0 7px 0;text-align:center;float:left;list-style:none}.menu .item i{color:#de3027;border-radius:100%;font-size:22px}.menu .item p{color:#555;font-size:12px;margin-top:3px}.list{overflow:hidden;float:left;margin-top:10px}.list .item{width:100%;padding:15px 15px;background-color:#fff;margin-bottom:10px}.list .item .images{margin-bottom:10px;display:flex}.list .item .images .image{flex:1;padding-right:5px}.list .item .images img{width:100%;height:100%;min-height:85px}.list .item p{display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:3;overflow:hidden}.list .item h1{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;margin-bottom:13px;font-weight:500;font-size:16px}.list .item p{color:#aaa;font-size:14px}
+.menu {
+  display: flex;
+  background-color: #fff;
+  padding: 0px 5px;
+  overflow: hidden;
+  float: left;
+  width: 100%;
+}
+.menu .item {
+  flex: 1;
+  padding: 7px 0px 7px 0;
+  text-align: center;
+  float: left;
+  list-style: none;
+}
+.menu .item i {
+  color: #de3027;
+  border-radius: 100%;
+  font-size: 22px;
+}
+.menu .item p {
+  color: #555;
+  font-size: 12px;
+  margin-top: 3px;
+}
+.list {
+  overflow: hidden;
+  float: left;
+  margin-top: 10px;
+}
+.list .item {
+  width: 100%;
+  padding: 15px 15px;
+  background-color: #fff;
+  margin-bottom: 10px;
+}
+.list .item .images {
+  margin-bottom: 10px;
+  display: flex;
+}
+.list .item .images .image {
+  flex: 1;
+  padding-right: 5px;
+}
+.list .item .images img {
+  width: 100%;
+  height: 100%;
+  min-height: 85px;
+}
+.list .item p {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}
+.list .item h1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 16px;
+}
+.list .item p {
+  color: #aaa;
+  font-size: 14px;
+}
