--- a/lottery_pc/assets/css/page/center.css
+++ b/lottery_pc/assets/css/page/center.css
@@ -1,154 +1,1 @@
-table {
-  width: 100%;
-  border-bottom: 1px solid #ddd;
-  border-left: 1px solid #ddd;
-}
-table th,
-table td {
-  font-size: 13px;
-  vertical-align: middle;
-  text-align: center;
-  padding: 10px;
-  border-right: 1px solid #ddd;
-  border-top: 1px solid #ddd;
-}
-table td {
-  line-height: 28px;
-}
-table tr {
-  width: 100%;
-}
-.title.top {
-  height: 105px;
-  width: 100%;
-  float: left;
-  text-align: center;
-  line-height: 105px;
-  color: #fff;
-  font-weight: 400;
-  font-size: 30px;
-  animation: page-title 0.5s ease-out 0.3s forwards;
-  -moz-animation: page-title 0.5s ease-out 0.3s forwards;
-  -webkit-animation: page-title 0.5s ease-out 0.3s forwards;
-  -o-animation: page-title 0.5s ease-out 0.3s forwards;
-}
-.title.top i {
-  width: 57px;
-  height: 57px;
-  border-radius: 57px;
-  line-height: 57px;
-  text-align: center;
-  display: inline-block;
-  background: #fff;
-  text-shadow: none;
-  box-shadow: 1px 1px 2px #4e2100;
-  color: #273041;
-  margin-right: 15px;
-}
-@keyframes page-title {
-  0% {
-    opacity: 0;
-    top: 1px;
-  }
-  100% {
-    opacity: 1;
-    top: -85px;
-  }
-}
-@-moz-keyframes page-title {
-  0% {
-    opacity: 0;
-    top: 1px;
-  }
-  100% {
-    opacity: 1;
-    top: -85px;
-  }
-}
-@-webkit-keyframes page-title {
-  0% {
-    opacity: 0;
-    top: 1px;
-  }
-  100% {
-    opacity: 1;
-    top: -85px;
-  }
-}
-@-o-keyframes page-title {
-  0% {
-    opacity: 0;
-    left: 420px;
-    top: 1px;
-  }
-  100% {
-    opacity: 1;
-    left: 420px;
-    top: -85px;
-  }
-}
-.left {
-  float: left;
-  margin-top: 10px;
-  width: 170px;
-}
-.left .box {
-  margin: 0;
-  font-size: 12px;
-  text-align: center;
-}
-.left .box .title {
-  height: 32px;
-  line-height: 32px;
-  background-color: rgba(70, 74, 88, 0.8);
-}
-.left .box .title span {
-  margin-left: -20px;
-}
-.left .box i {
-  float: left;
-  position: relative;
-  top: 9px;
-  color: #4a5268;
-}
-.left .box .content a {
-  margin: 1px 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  color: #aaa;
-  text-align: center;
-  line-height: 30px;
-  transition: all 0.15s ease-in-out;
-  -moz-transition: all 0.15s ease-in-out;
-  -webkit-transition: all 0.15s ease-in-out;
-  -o-transition: all 0.15s ease-in-out;
-  -ms-transition: all 0.15s ease-in-out;
-}
-.left .box .content a.active,
-.left .box .content a:hover {
-  color: #ea721a;
-  border-radius: 30px;
-  font-size: 14px;
-  background-color: rgba(70, 74, 88, 0.8);
-}
-.right {
-  position: relative;
-  width: 850px;
-  float: left;
-  margin: 10px 0 0 10px;
-  background-color: #f5f5f5;
-  padding: 20px;
-}
-.right:after {
-  content: "";
-  width: 0;
-  height: 0;
-  position: absolute;
-  left: 310px;
-  top: -15px;
-  border-width: 0 15px 15px 15px;
-  border-style: solid;
-  border-color: #f5f5f5 transparent;
-  z-index: 52;
-}
+table{width:100%;border-bottom:1px solid #ddd;border-left:1px solid #ddd}table th,table td{font-size:13px;vertical-align:middle;text-align:center;padding:10px;border-right:1px solid #ddd;border-top:1px solid #ddd}table td{line-height:28px}table tr{width:100%}.title.top{height:105px;width:100%;float:left;text-align:center;line-height:105px;color:#fff;font-weight:400;font-size:30px;animation:page-title .5s ease-out .3s forwards;-moz-animation:page-title .5s ease-out .3s forwards;-webkit-animation:page-title .5s ease-out .3s forwards;-o-animation:page-title .5s ease-out .3s forwards}.title.top i{width:57px;height:57px;border-radius:57px;line-height:57px;text-align:center;display:inline-block;background:#fff;text-shadow:none;box-shadow:1px 1px 2px #4e2100;color:#273041;margin-right:15px}@keyframes page-title{0%{opacity:0;top:1px}100%{opacity:1;top:-85px}}@-moz-keyframes page-title{0%{opacity:0;top:1px}100%{opacity:1;top:-85px}}@-webkit-keyframes page-title{0%{opacity:0;top:1px}100%{opacity:1;top:-85px}}@-o-keyframes page-title{0%{opacity:0;left:420px;top:1px}100%{opacity:1;left:420px;top:-85px}}.left{float:left;margin-top:10px;width:170px}.left .box{margin:0;font-size:12px;text-align:center}.left .box .title{height:32px;line-height:32px;background-color:rgba(70,74,88,0.8)}.left .box .title span{margin-left:-20px}.left .box i{float:left;position:relative;top:9px;color:#4a5268}.left .box .content a{margin:1px 0;display:block;width:100%;height:100%;color:#aaa;text-align:center;line-height:30px;transition:all .15s ease-in-out;-moz-transition:all .15s ease-in-out;-webkit-transition:all .15s ease-in-out;-o-transition:all .15s ease-in-out;-ms-transition:all .15s ease-in-out}.left .box .content a.active,.left .box .content a:hover{color:#ea721a;border-radius:30px;font-size:14px;background-color:rgba(70,74,88,0.8)}.right{position:relative;width:850px;float:left;margin:10px 0 0 10px;background-color:#f5f5f5;padding:20px}.right:after{content:"";width:0;height:0;position:absolute;left:310px;top:-15px;border-width:0 15px 15px 15px;border-style:solid;border-color:#f5f5f5 transparent;z-index:52}
